--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body{
 
 .campi{
     margin-bottom: 1.5em;
+    padding: 0 0.5em;
     height: 150px;
     width: 70%;
     border: 2px solid rgb(113 247 158);
@@ -54,7 +55,7 @@ h4{
     width: 90%;
     position: absolute;
     top: -2px;
-    left: 40px;
+    left: 60px;
     padding: 0.4em;
 }
 
