--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,13 @@
 body{
     font-family: 'Monofonto', sans-serif;
     color: rgb(113 247 158);
-    font-size: 70px;
+    font-size: 60px;
 }
 
 
 .container{
     background-color: black;
-    padding: 3em 5em;
+    padding: 2em 4em 0.5em;
     height: 100vh;
     overflow-y: hidden;
     background-image: url("https://i.pinimg.com/originals/aa/23/55/aa235579fa80090cbe4bdbf195a88295.jpg");
@@ -25,7 +25,7 @@ body{
 }
 
 .campi{
-    margin-bottom: 1.5em;
+    margin-bottom: 0.8em;
     padding: 0 0.5em;
     height: 150px;
     width: 70%;
@@ -56,7 +56,7 @@ h4{
     position: absolute;
     top: -2px;
     left: 60px;
-    padding: 0.4em;
+    padding: 0.5em;
 }
 
 
@@ -69,37 +69,65 @@ h4{
     }
 
     .container{
-        padding: 4em 2em;
+        padding: 2.5em 2em;
     }
 
     .campi{
         height: 120px;
     }
 
+    h4{
+        height: calc(103% + 1px);
+    }
+
 }
 
-@media screen and (max-width:1626px) {
+@media screen and (max-width:1745px) {
+
 
     .container{
-        padding: 5em 2em;
+        padding: 3.5em 2em;
     }
 
     .campi{
         height: 110px;
-        margin-bottom: 1em;
+        margin-bottom: 0.5em;
+    }
+
+    h4{
+        left: 50px;
+    }
+
+}
+
+@media screen and (max-width:1626px) {
+
+    .campi{
+        height: 100px;
+    }
+
+    h4{
+        height: calc(103% + 1.5px);
     }
 
 }
 
 @media screen and (max-width:1482px) {
 
+    body{
+        font-size: 55px;
+    }
+
     .container{
-        padding: 5.5em 2em;
+        padding: 5em 2em;
     }
 
     .campi{
-        height: 100px;
-        margin-bottom: 1em;
+        height: 90px;
+    }
+
+    h4{
+        left: 45px;
     }
 }
 
@@ -110,12 +138,32 @@ h4{
     }
 
     .container{
-        padding: 8em 2em;
+        padding: 6.5em 2em;
     }
 
     .campi{
         height: 80px;
-        margin-bottom: 1em;
+    }
+
+    h4{
+        padding: 0.2em;
+        left: 40px;
+    }
+
+}
+
+@media screen and (max-width:1194px) {
+
+    body{
+        font-size: 40px;
+    }
+
+    .container{
+        padding: 9em 2em;
+    }
+
+    .campi{
+        height: 75px;
     }
 
     h4{
@@ -124,10 +172,10 @@ h4{
 
 }
 
-@media screen and (max-width:1056px) {
+@media screen and (max-width:1028px) {
 
     body{
-        font-size: 40px;
+        font-size: 35px;
     }
 
     .container{
@@ -135,13 +183,30 @@ h4{
     }
 
     .campi{
-        height: 75px;
-        margin-bottom: 1em;
+        height: 70px;
     }
 
     h4{
+        height: calc(103% + 2.5px);
         padding: 0.2em;
     }
+
+}
+
+@media screen and (max-width:924px) {
+
+    body{
+        font-size: 30px;
+    }
+
+    .container{
+        padding: 14em 2em;
+    }
+
+    .campi{
+        height: 60px;
+    }
+
 
 }
 
